--- a/assets/scss/issues.scss
+++ b/assets/scss/issues.scss
@@ -336,6 +336,7 @@
                     }
 
                     .stats {
+                        align-self: flex-start;
                         display: flex;
                         align-items: center;
                         justify-content: center;
